Correct <Modal /> z-index

--- a/src/components/Modal/index.css
+++ b/src/components/Modal/index.css
@@ -9,6 +9,7 @@
   opacity: 0;
   will-change: opacity;
   transition: opacity ease 0.2s;
+  z-index: 10;
 }
 
 .modal--show {
